--- a/src/main/res/drawable/floatingcontainer.xml
+++ b/src/main/res/drawable/floatingcontainer.xml
@@ -1,17 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:enterFadeDuration="@integer/material_motion_duration_short_1"
-    android:exitFadeDuration="@integer/material_motion_duration_short_1" >
-
-    <item>
-        <layer-list>
-            <item>
-                <shape>
-                    <solid android:color="@color/backgroundButtonHover" />
-                    <stroke android:color="@color/backgroundTint" android:width="2dp" />
-                    <corners android:radius="@dimen/bigfloating_radius" />
-                </shape>
-            </item>
-        </layer-list>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:gravity="right"
+        android:right="@dimen/smallfloating_gradient_right">
+        <shape>
+            <gradient
+                android:startColor="@color/backgroundButtonHover"
+                android:endColor="@color/backgroundTint"
+                android:type="linear"/>
+            <size android:width="@dimen/smallfloating_gradient_width" />
+        </shape>
     </item>
-</selector>
+    <item
+        android:gravity="right"
+        android:right="@dimen/smallfloating_gradient_end">
+        <shape>
+            <solid android:color="@color/backgroundButtonHover" />
+            <corners android:topLeftRadius="@dimen/bigfloating_radius" android:bottomLeftRadius="@dimen/bigfloating_radius" />
+        </shape>
+    </item>
+    <item
+        android:top="@dimen/smallfloating_stroke_width"
+        android:left="@dimen/smallfloating_stroke_width"
+        android:bottom="@dimen/smallfloating_stroke_width"
+        android:right="@dimen/smallfloating_stroke_width">
+        <shape>
+            <solid android:color="@color/backgroundButtonHover" />
+            <!--stroke android:color="@color/backgroundTint" android:width="2dp" /-->
+            <corners android:radius="@dimen/bigfloating_radius" />
+        </shape>
+    </item>
+</layer-list>
