--- a/src/main/res/layout/activity_map.xml
+++ b/src/main/res/layout/activity_map.xml
@@ -7,15 +7,6 @@
     android:theme="@style/Theme.Echtzeyt"
     tools:context=".MapActivity" >
 
-    <View
-        android:id="@+id/fillerCutout"
-        android:layout_width="match_parent"
-        android:layout_height="0.00001px"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="PxUsage" />
-
     <org.osmdroid.views.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
@@ -28,6 +19,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/fillerCutout"
+        android:layout_width="match_parent"
+        android:layout_height="0.00001px"
+        android:alpha="0.6"
+        android:background="@drawable/fillercutout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="PxUsage" />
 
     <com.maddin.echtzeyt.components.PullupScrollView
         android:id="@+id/scrollStationInfo"
@@ -171,8 +173,7 @@
         app:shadowColors="@array/shadow_colors"
         app:shadowSize="@dimen/shadow_size"
         app:shadowStops="@array/shadow_stops"
-        app:srcCompat="@drawable/ic_back"
-        tools:layout_editor_absoluteY="71dp" />
+        app:srcCompat="@drawable/ic_back" />
 
     <com.maddin.echtzeyt.components.FloatingButton
         android:id="@+id/btnMapLocate"
@@ -193,7 +194,28 @@
         app:shadowColors="@array/shadow_colors"
         app:shadowSize="@dimen/shadow_size"
         app:shadowStops="@array/shadow_stops"
-        app:srcCompat="@drawable/ic_locate"
-        tools:layout_editor_absoluteY="71dp" />
+        app:srcCompat="@drawable/ic_locate" />
+
+    <com.maddin.echtzeyt.components.FloatingButton
+        android:id="@+id/btnMapHideMarkers"
+        android:layout_width="@dimen/bigfloating_size"
+        android:layout_height="@dimen/bigfloating_size"
+        android:layout_marginTop="@dimen/bigfloating_margin"
+        android:layout_marginEnd="@dimen/bigfloating_margin"
+        android:layout_marginRight="@dimen/bigfloating_margin"
+        android:background="@drawable/floatingbutton_second"
+        android:clickable="true"
+        android:contentDescription="@string/btnLocateDescription"
+        android:focusable="true"
+        android:padding="@dimen/bigfloating_padding"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnMapLocate"
+        app:radiusInner="@dimen/bigfloating_radius"
+        app:shadowColors="@array/shadow_colors"
+        app:shadowSize="@dimen/shadow_size"
+        app:shadowStops="@array/shadow_stops"
+        app:srcCompat="@drawable/ic_stationmark_visible"
+        app:offsetIconY="0.04" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
