--- a/src/main/res/drawable/bookmarks.xml
+++ b/src/main/res/drawable/bookmarks.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/backgroundTint" />
+    <solid android:color="@color/backgroundButton" />
     <corners android:radius="@dimen/bigfloating_radius" android:bottomLeftRadius="0dp" />
 </shape>
