--- a/src/main/res/drawable/innerradius.xml
+++ b/src/main/res/drawable/innerradius.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:left="0dp" android:top="0dp" android:bottom="@dimen/bigfloating_radius" android:right="@dimen/bigfloating_radius">
-        <shape>
-            <solid android:color="@color/backgroundTint" />
-        </shape>
-    </item>
-    <item>
-        <shape>
-            <solid android:color="@color/background" />
-            <corners android:radius="@dimen/bigfloating_radius" />
-            <size android:width="@dimen/bigfloating_size" android:height="@dimen/bigfloating_size" />
-        </shape>
-    </item>
-</layer-list>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="40dp" android:height="40dp"
+    android:viewportWidth="500" android:viewportHeight="500">
+    <path android:fillColor="@color/backgroundButton" android:pathData="M0,0L500,0A500,500,0,0,0,0,500Z" />
+</vector>
