--- a/src/main/res/layout-v21/button_bookmark.xml
+++ b/src/main/res/layout-v21/button_bookmark.xml
@@ -15,6 +15,8 @@
     android:textColor="@color/foreground"
     android:textSize="16sp"
     android:letterSpacing="-0.01"
+    android:maxLines="1"
+    android:ellipsize="end"
     app:backgroundTint="@android:color/transparent"
     tools:ignore="TextContrastCheck">
 
