--- a/src/main/res/layout/activity_map.xml
+++ b/src/main/res/layout/activity_map.xml
@@ -54,7 +54,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clipChildren="false">
+            android:clipChildren="false" >
 
             <com.maddin.echtzeyt.components.DropShadow
                 android:layout_width="0dp"
@@ -77,7 +77,11 @@
                 android:minHeight="80dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:radiusInner="@dimen/pullup_radius"
+                app:shadowColors="@array/shadow_colors"
+                app:shadowSize="@dimen/shadow_size"
+                app:shadowStops="@array/shadow_stops">
 
                 <LinearLayout
                     android:layout_width="match_parent"
