--- a/src/main/res/layout/button_bookmark.xml
+++ b/src/main/res/layout/button_bookmark.xml
@@ -14,6 +14,8 @@
     android:textAllCaps="false"
     android:textColor="@color/foreground"
     android:textSize="16sp"
+    android:maxLines="1"
+    android:ellipsize="end"
     app:backgroundTint="@android:color/transparent"
     tools:ignore="TextContrastCheck">
 
