--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -157,7 +157,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dividerSearch">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <!--androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layoutScroll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -262,7 +262,13 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_min="20dp" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout-->
+        <LinearLayout
+            android:id="@+id/layoutScroll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingBottom="40dp" />
     </com.maddin.echtzeyt.components.BottomFadeEdgeScrollView>
 
     <TextView
