added abstract EchtzeytForegroundActivity that handles whether or not an activity is in the foreground and can consume mobile data, adapted EchtzeytActivity and MapActivity to use EchtzeytActivity; switched from Handler(Looper.getMainLooper()).post to runOnUiThread; added custom icons for all alertdialogs (mobile data, error, locate); changed composition layouts to have a comp prefix; made some activity properties abstract to force the implementation to fill those fields; added licenses activity (-> may be changed to fragment soon); map activity itself is the location listener now; added copyright notice to map; added alertdialog to ask the user if he wants to use mobile data for downloading map data; added check if gps got enabled or disabled -> hide or show the location marker accordingly; markers will now be faded out when the user zooms out -> better performance and the user can view the map without having thousands of markers in his way; markers will get transparent if the location marker is behind them; all major buttons are now floatingbuttons; refactored settings activity to use lazy delegation on views

--- a/src/main/res/layout/activity_map.xml
+++ b/src/main/res/layout/activity_map.xml
@@ -20,6 +20,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:id="@+id/layoutMapCopyright"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/map_copyright_margin"
+        android:layout_marginLeft="@dimen/map_copyright_margin"
+        android:alpha="0.7"
+        android:background="@drawable/copyright"
+        android:paddingLeft="@dimen/map_copyright_padding_x"
+        android:paddingTop="@dimen/map_copyright_padding_y"
+        android:paddingRight="@dimen/map_copyright_padding_x"
+        android:paddingBottom="@dimen/map_copyright_padding_y"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" >
+        <TextView
+            android:id="@+id/txtMapCopyright"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/mapCopyright"
+            android:textColor="@color/foregroundText"
+            android:textSize="@dimen/map_copyright_text_size" />
+    </LinearLayout>
+
     <View
         android:id="@+id/fillerCutout"
         android:layout_width="match_parent"
@@ -159,7 +183,7 @@
     </com.maddin.echtzeyt.components.PullupScrollView>
 
     <com.maddin.echtzeyt.components.FloatingButton
-        android:id="@+id/btnMapBack"
+        android:id="@+id/btnLicensesBack"
         android:layout_width="@dimen/bigfloating_size"
         android:layout_height="@dimen/bigfloating_size"
         android:layout_marginTop="@dimen/bigfloating_margin"
