first attempts on tabbed settings -> later the main view may be tabbed for multiple different fragments (i.e. realtime, trip planner, ...); major refactoring of the transparent activities -> the implementing app does not need to extend the activities anymore; refactored and split the AndroidManifest to work well with the refactored activities, implementing apps can still extend the classes and override the existing manifest entries if they want to; added configuration class that holds all information on which api should be used, which activities are available, which fragments should be displayed, ... -> implementing apps should override the Application() class to configure the app before any activity starts

--- a/src/main/res/values/attr.xml
+++ b/src/main/res/values/attr.xml
@@ -56,4 +56,8 @@
         <attr name="text" format="string" />
         <attr name="icon" format="reference" />
     </declare-styleable>
+
+    <declare-styleable name="MenuTabLayout">
+        <attr name="paddingContent" format="dimension" />
+    </declare-styleable>
 </resources>
