--- a/src/main/res/layout/activity_settings.xml
+++ b/src/main/res/layout/activity_settings.xml
@@ -8,19 +8,88 @@
     android:theme="@style/Theme.Echtzeyt"
     tools:context=".SettingsActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarSettings"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutToolbarSettings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/toolbar"
-        android:minHeight="@dimen/toolbar_height"
-        android:theme="?attr/actionBarTheme"
+        android:clipChildren="true"
+        android:clipToOutline="true"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/appNameSettings"
-        app:titleMarginStart="6dp"
-        app:titleTextColor="?attr/colorSecondary" />
+        tools:ignore="UnusedAttribute">
+
+        <com.maddin.echtzeyt.components.MenuTabLayout
+            android:id="@+id/tabLayoutSettingsMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-12dp"
+            android:background="@color/transparent"
+            android:fadingEdge="horizontal"
+            android:fadingEdgeLength="40dp"
+            android:requiresFadingEdge="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbarSettings"
+            app:paddingContent="@dimen/toolbar_radius"
+            app:tabBackground="@color/transparent"
+            app:tabGravity="center"
+            app:tabIndicatorAnimationMode="elastic"
+            app:tabIndicatorColor="@color/background"
+            app:tabIndicatorGravity="bottom"
+            app:tabIndicatorHeight="4dp"
+            app:tabMinWidth="0dp"
+            app:tabMode="auto"
+            app:tabPaddingEnd="20dp"
+            app:tabPaddingStart="20dp"
+            app:tabSelectedTextAppearance="@style/Theme.Echtzeyt.TabLayout.Tab.Selected"
+            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+            app:tabTextColor="?attr/colorSecondary">
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Allgemein" />
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Abfahrten" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tabItem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reiseplan" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tabItem2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Karte" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tabItem3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Über" />
+        </com.maddin.echtzeyt.components.MenuTabLayout>
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarSettings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:minHeight="@dimen/toolbar_height"
+            android:theme="?attr/actionBarTheme"
+            app:title="@string/appNameSettings"
+            app:titleMarginStart="6dp"
+            app:titleTextColor="?attr/colorSecondary" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.maddin.echtzeyt.components.FloatingButton
         android:id="@+id/btnSettingsSave"
@@ -42,6 +111,15 @@
         app:shadowStops="@array/shadow_stops"
         tools:ignore="DuplicateSpeakableTextCheck" />
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpagerSettings"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layoutToolbarSettings" />
+
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/settingsSaveContentSwitch"
         android:layout_width="0dp"
@@ -56,7 +134,7 @@
         android:textSize="@dimen/settings_label_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarSettings"
+        app:layout_constraintTop_toBottomOf="@+id/layoutToolbarSettings"
         app:switchPadding="@dimen/settings_switch_padding"
         app:thumbTint="@color/foreground"
         app:trackTint="@color/backgroundSunken"
@@ -169,89 +247,7 @@
         app:useMaterialThemeColors="true"
         tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />
 
-    <LinearLayout
-        android:id="@+id/layoutBuildApp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@id/layoutBuildBase"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/txtAppInformationName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/appName"
-            android:textColor="@color/foreground"
-            android:textSize="12sp"
-            tools:ignore="TextContrastCheck" />
-
-        <TextView
-            android:id="@+id/txtAppInformationConcat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=" @ "
-            android:textColor="@color/foreground"
-            android:textSize="12sp"
-            tools:ignore="HardcodedText,TextContrastCheck" />
-
-        <TextView
-            android:id="@+id/txtAppInformationVersion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/appVersion"
-            android:textColor="@color/foreground"
-            android:textSize="12sp"
-            tools:ignore="TextContrastCheck" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layoutBuildBase"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/txtBaseInformationText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/_libraryEchtzeytBasedOn"
-            android:textColor="@color/foregroundHint"
-            android:textSize="10sp"
-            tools:ignore="SmallSp,TextContrastCheck" />
-
-        <TextView
-            android:id="@+id/txtBaseInformationName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/_libraryEchtzeytName"
-            android:textColor="@color/foregroundHint"
-            android:textSize="10sp"
-            tools:ignore="SmallSp,TextContrastCheck" />
-
-        <TextView
-            android:id="@+id/txtBaseInformationConcat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=" @ "
-            android:textColor="@color/foregroundHint"
-            android:textSize="10sp"
-            tools:ignore="HardcodedText,SmallSp,TextContrastCheck" />
-
-        <TextView
-            android:id="@+id/txtBaseInformationVersion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/_libraryEchtzeytVersion"
-            android:textColor="@color/foregroundHint"
-            android:textSize="10sp"
-            tools:ignore="SmallSp,TextContrastCheck" />
-    </LinearLayout>
+    <include layout="@layout/comp_build" />
 
     <com.maddin.echtzeyt.components.FloatingInfoButton
         android:id="@+id/btnLicenses"
@@ -261,13 +257,12 @@
         android:layout_marginRight="@dimen/smallfloating_margin_side"
         android:layout_marginBottom="@dimen/smallfloating_margin_bottom"
         app:icon="@drawable/ic_license"
+        app:layout_constraintBottom_toTopOf="@+id/btnSettingsSave"
+        app:layout_constraintEnd_toEndOf="parent"
         app:radiusInner="@dimen/bigfloating_radius"
-        app:shadowBelow="@id/btnMenu"
         app:shadowColors="@array/shadow_colors"
         app:shadowSize="@dimen/shadow_size_small"
         app:shadowStops="@array/shadow_stops"
-        app:layout_constraintBottom_toTopOf="@+id/btnSettingsSave"
-        app:layout_constraintEnd_toEndOf="parent"
         app:text="@string/btnLicensesDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
